# l-solver

./: .gitignore  CMakeLists.txt  README.md  main.cfg  main.cpp
adapters/: CplexAdapter.cpp  CplexAdapter.h  SolverAdapter.h
cmake/: FindCPLEX.cmake  UseCPLEX.cmake
docs/: AbstractConstraint_8cpp__incl.map  AbstractConstraint_8cpp__incl.md5  AbstractConstraint_8h.html  AbstractConstraint_8h__dep__incl.map  AbstractConstraint_8h__dep__incl.md5  AbstractConstraint_8h_source.html  AbstractObjective_8cpp__incl.map  AbstractObjective_8h.html  AbstractObjective_8h__dep__incl.map  AbstractObjective_8h__dep__incl.md5  AbstractObjective_8h__incl.map  AbstractObjective_8h_source.html  AbstractVariable_8cpp__incl.map  AbstractVariable_8h.html  AbstractVariable_8h__dep__incl.map  AbstractVariable_8h__dep__incl.md5  AbstractVariable_8h__incl.map  Application_8cpp.html  Application_8cpp__incl.md5  Application_8h.html  Application_8h__dep__incl.map  Application_8h__dep__incl.md5  Application_8h_source.html  BranchAndBoundNode_8cpp.html  BranchAndBoundNode_8cpp__incl.map  BranchAndBoundNode_8cpp__incl.md5  BranchAndBoundNode_8h.html  BranchAndBoundNode_8h__dep__incl.map  BranchAndBoundNode_8h__dep__incl.md5  BranchAndBoundNode_8h__incl.map  BranchAndBoundNode_8h__incl.md5  BranchAndBoundNode_8h_source.html  BranchAndBound_8cpp.html  BranchAndBound_8cpp__dep__incl.map  BranchAndBound_8cpp__dep__incl.md5  BranchAndBound_8cpp__incl.map  BranchAndBound_8cpp__incl.md5  BranchAndBound_8h.html  BranchAndBound_8h__dep__incl.map  (+733 more)
docs_config/: config
src/: CMakeLists.txt
src/LSolver/adapters/: CplexAdapter.cpp  CplexAdapter.h  SolverAdapter.h
src/LSolver/algorithms/: Solver.cpp  Solver.h
src/LSolver/algorithms/BranchAndBound/: BranchAndBound.cpp  BranchAndBound.h  BranchAndBoundNode.cpp  BranchAndBoundNode.h
src/LSolver/algorithms/ColumnGeneration/: Column.cpp  Column.h  ColumnGeneration.cpp  ColumnGeneration.h  ColumnIterator.h
src/LSolver/algorithms/DantzigWolfe/: DantzigWolfe.cpp  DantzigWolfe.h
src/LSolver/algorithms/DantzigWolfeBranchAndPrice/: DantzigWolfeBranchAndPrice.cpp  DantzigWolfeBranchAndPrice.h
src/LSolver/algorithms/DantzigWolfeDecomposition/: DantzigWolfeColumnIterator.cpp  DantzigWolfeColumnIterator.h  DantzigWolfeDecomposition.cpp  DantzigWolfeDecomposition.h
src/LSolver/algorithms/DantzigWolfeSolver/: DantzigWolfeColumnIterator.cpp  DantzigWolfeColumnIterator.h  DantzigWolfeDecompositionAlgorithm.cpp  DantzigWolfeDecompositionAlgorithm.h  DantzigWolfeModel.cpp  DantzigWolfeModel.h
src/LSolver/algorithms/DirectSolver/: DirectLPSolver.cpp  DirectLPSolver.h  DirectMILPSolver.cpp  DirectMILPSolver.h
src/LSolver/algorithms/MILPBranchAndBound/: MILPBranchAndBound.cpp  MILPBranchAndBound.h
src/LSolver/algorithms/branch-and-bound/: BranchAndBound.cpp  BranchAndBound.h  BranchAndBoundNode.h
src/LSolver/algorithms/branch-and-bound/branching-rules/: BranchingRule.h
src/LSolver/algorithms/column-generation/: Column.cpp  ColumnGeneration.h
src/LSolver/algorithms/dantzig-wolfe/: DantzigWolfeColumnIterator.cpp  DantzigWolfeColumnIterator.h  DantzigWolfeDecompositionAlgorithm.h  DantzigWolfeDecompositionSolver.cpp  DantzigWolfeDecompositionSolver.h  DantzigWolfeModel.cpp
src/LSolver/algorithms/dantzig-wolfe-branch-and-price/: DantzigWolfeBranchAndPrice.cpp  DantzigWolfeBranchAndPrice.h
src/LSolver/algorithms/direct-solver/: DirectLPSolver.cpp  DirectLPSolver.h  DirectMILPSolver.cpp  DirectMILPSolver.h
src/LSolver/algorithms/milp-branch-and-bound/: MILPBranchAndBound.cpp
src/LSolver/application/: Application.h  LogManager.h  ParameterManager.cpp  ParameterManager.h  enums.h
src/LSolver/environment/: Environment.cpp  Environment.h
src/LSolver/modeling/: Constraint.cpp  Constraint.h  DualAngularModel.cpp  DualAngularModel.h  Expression.cpp  Expression.h  Model.cpp  Model.h  Objective.cpp  Objective.h  Row.h  Variable.cpp  Variable.h  Vector.cpp  Vector.h  enums.cpp  enums.h
src/LSolver/modeling/constraints/: AbstractConstraint.cpp  AbstractConstraint.h  Constraint.cpp  Constraint.h  CoreConstraint.cpp  CoreConstraint.h  DetachedConstraint.cpp  DetachedConstraint.h
src/LSolver/modeling/expressions/: Expression.cpp  Expression.h
src/LSolver/modeling/models/: Decomposition.cpp  Decomposition.h  DetachedModel.cpp  DetachedModel.h  DualAngularModel.cpp  DualAngularModel.h  Model.cpp  Model.h
src/LSolver/modeling/objectives/: AbstractObjective.cpp  AbstractObjective.h  CoreObjective.cpp  CoreObjective.h  DetachedObjective.cpp  DetachedObjective.h  Objective.cpp  Objective.h
src/LSolver/modeling/variables/: AbstractVariable.cpp  AbstractVariable.h  CoreVariable.cpp  CoreVariable.h  DetachedVariable.cpp  DetachedVariable.h  Variable.cpp  Variable.h
src/LSolver/modeling/vectors/: VariableVector.cpp  VariableVector.h  Vector.cpp  Vector.h
src/LSolver/plots/: MeshPoints.cpp  MeshPoints.h  Plot.cpp  Plot.h  SubPlot.cpp  SubPlot.h  Surface.cpp  Surface.h
src/LSolver/utils/: Exception.cpp  Exception.h
src/algorithms/BranchAndBound/: BranchAndBound.cpp  BranchAndBound.h  BranchAndBoundNode.cpp  BranchAndBoundNode.h
src/algorithms/BranchAndBound/BranchingRules/: BranchingRule.h  MostInfeasibleBranchingRule.cpp  MostInfeasibleBranchingRule.h
src/algorithms/DirectSolver/: DirectLPSolver.cpp  DirectMILPSolver.h
src/algorithms/MILPBranchAndBound/: MILPBranchAndBound.cpp
src/application/: Application.cpp  Application.h  LogManager.h  ParameterManager.cpp  ParameterManager.h  enums.h
src/modeling/: Expression.cpp  Model.cpp  Model.h  Objective.h  Variable.cpp  Variable.h  Vector.h
src/structures/: MapIterator.h
tests/: CMakeLists.txt  TestsMain.cpp  test.cfg
tests/algorithms/: DantzigWolfeBranchAndPrice-Test.h  DantzigWolfeBranchAndPriceTest.h  DantzigWolfeDecomposition.h  DantzigWolfeDecompositionSolver-Test.h  DirectLPSolver-Test.h  DirectLPSolver.h  DirectMILPSolver-Test.h  DirectMILPSolver.h  MILPBranchAndBound-Test.h  MILPBranchAndBound.h
tests/lib/: install.sh
tests/modeling/: DualAngularModelTest.h  ExpressionTests.h  VariableTests.h
(+667 files in other folders)
